# Nuclex.FrameFixer.Native

./: .gitmodules  ReadMe.md  frame-fixer.code-workspace
Nuclex.FrameFixer.Native/: .gitignore  CMakeLists.txt  Dependencies.md  Notice.md  ReadMe.md
Nuclex.FrameFixer.Native/Include/Nuclex/FrameFixer/: Config.h  QZoomableGraphicsView.h
Nuclex.FrameFixer.Native/Include/Nuclex/Telecide/: QZoomableGraphicsView.h
Nuclex.FrameFixer.Native/Source/: Config.cpp  Config.h  DeinterlacerItemModel.cpp  DeinterlacerItemModel.h  ExportDialog.cpp  ExportDialog.h  Exporter.cpp  Exporter.h  FrameThumbnailItemModel.cpp  FrameThumbnailItemModel.h  FrameThumbnailPaintDelegate.cpp  FrameThumbnailPaintDelegate.h  InterpolatorItemModel.cpp  InterpolatorItemModel.h  Main.cpp  MainWindow.cpp  MainWindow.h  QZoomableGraphicsView.cpp  RenderDialog.cpp  RenderDialog.h  RenderProgressDialog.cpp  RenderProgressDialog.h  Renderer.cpp  Renderer.h  Telecide.cpp  Telecide.h
Nuclex.FrameFixer.Native/Source/Algorithm/: AnimeDeinterlacer.cpp  AnimeDeinterlacer.h  Averager.cpp  Averager.h  Deinterlacer.cpp  Deinterlacer.h  Filter.cpp  Filter.h  Gradient.cpp  Gradient.h  GradientMatrix.cpp  GradientMatrix.h  HslColor.cpp  HslColor.h  InterlaceDetector.cpp  InterlaceDetector.h  LibAvDeinterlacer.cpp  LibAvDeinterlacer.h  LibAvEstdifDeinterlacer.cpp  LibAvEstdifDeinterlacer.h  LibAvNNedi3Deinterlacer.cpp  LibAvNNedi3Deinterlacer.h  LibAvYadifDeinterlacer.cpp  LibAvYadifDeinterlacer.h  NNedi3Deinterlacer.cpp  NNedi3Deinterlacer.h  PreviewDeinterlacer.cpp  PreviewDeinterlacer.h  ReYadifDeinterlacer.cpp  ReYadifDeinterlacer.h  RgbColor.cpp  RgbColor.h  RgbGradient.cpp  RgbGradient.h  RgbGradientMatrix.cpp  RgbGradientMatrix.h  Telecide.cpp  YadifDeinterlacer.cpp  YadifDeinterlacer.h  YadifMod2Deinterlacer.cpp  (+1 more)
Nuclex.FrameFixer.Native/Source/Algorithm/Analysis/: InterlaceDetector.cpp  InterlaceDetector.h
Nuclex.FrameFixer.Native/Source/Algorithm/Deblend/: Gradient.cpp  Gradient.h  GradientMatrix.cpp  GradientMatrix.h
Nuclex.FrameFixer.Native/Source/Algorithm/Deblending/: Deblender.cpp  Deblender.h  Gradient.h  GradientMatrix.cpp  GradientMatrix.h
Nuclex.FrameFixer.Native/Source/Algorithm/Deinterlace/: AnimeDeinterlacer.cpp  AnimeDeinterlacer.h  Deinterlacer.h  LibAvDeinterlacer.cpp  LibAvDeinterlacer.h  LibAvEstdifDeinterlacer.cpp  LibAvEstdifDeinterlacer.h  LibAvNNedi3Deinterlacer.cpp  LibAvNNedi3Deinterlacer.h  LibAvYadifDeinterlacer.cpp  LibAvYadifDeinterlacer.h  PreviewDeinterlacer.cpp  PreviewDeinterlacer.h  ReYadifDeinterlacer.cpp  ReYadifDeinterlacer.h  YadifMod2Deinterlacer.cpp  YadifMod2Deinterlacer.h
Nuclex.FrameFixer.Native/Source/Algorithm/Deinterlacing/: AnimeDeinterlacer.cpp  AnimeDeinterlacer.h  BasicDeinterlacer.cpp  BasicDeinterlacer.h  Deinterlacer.cpp  Deinterlacer.h  LibAvDeinterlacer.cpp  LibAvDeinterlacer.h  LibAvEstdifDeinterlacer.cpp  LibAvEstdifDeinterlacer.h  LibAvNNedi3Deinterlacer.cpp  LibAvNNedi3Deinterlacer.h  LibAvYadifDeinterlacer.cpp  LibAvYadifDeinterlacer.h  PreviewDeinterlacer.cpp  PreviewDeinterlacer.h  ReYadifDeinterlacer.cpp  ReYadifDeinterlacer.h  YadifMod2Deinterlacer.cpp  YadifMod2Deinterlacer.h
Nuclex.FrameFixer.Native/Source/Algorithm/Deinterlacing/yadifmod2-0.2.8/: common.h
Nuclex.FrameFixer.Native/Source/Algorithm/Interpolation/: ExternalRifeFrameInterpolator.cpp  ExternalRifeFrameInterpolator.h  FrameInterpolator.cpp  FrameInterpolator.h  NullFrameInterpolator.cpp  NullFrameInterpolator.h
Nuclex.FrameFixer.Native/Source/Database/: FrameDatabase.cpp  FrameDatabase.h
Nuclex.FrameFixer.Native/Source/Model/: DeinterlaceMode.cpp  DeinterlaceMode.h  Frame.cpp  Frame.h  FrameAction.cpp  FrameAction.h  FrameType.cpp  FrameType.h  Movie.cpp  Movie.h
Nuclex.FrameFixer.Native/Source/Platform/: LibAvApi.cpp  LibAvApi.h
Nuclex.FrameFixer.Native/Source/Services/: DeinterlacerRepository.cpp  DeinterlacerRepository.h  InterpolatorRepository.cpp  InterpolatorRepository.h  ServicesRoot.cpp  ServicesRoot.h
Nuclex.FrameFixer.Native/Source/cvDeinterlace-2016-09-19/: ReYadif8.cpp
Nuclex.FrameFixer.Native/Source/yadifmod2-0.2.8/: common.h  proc_filter.cpp
Nuclex.FrameFixer.Native/Tests/: DummyTest.cpp
Nuclex.FrameFixer.Native/UserInterface/: ExportDialog.ui  ExportProgressDialog.ui  MainWindow.ui  RenderDialog.ui  RenderProgressDialog.ui  untitled.ui
